Name:           lbh
Version:        0.0.0.1
build-type:     Simple
Author:         Deian Stefan
Maintainer:     Deian Stefan <deian@cs.stanford.edu>
Stability:      experimental
Synopsis:       
Category:       Web
Cabal-Version:  >= 1.6

Description:
  Simple platform for learning Haskell, inspired by School of Haskell.

X-Hails-Server: LBH.Controller

Executable lbh
  Main-is: Main.hs
  Build-Depends:
    base              >= 4.5     && < 5.0
   ,hails             >= 0.11.2.1
   ,transformers
   ,mtl
   ,containers
   ,bytestring
   ,text     
   ,lio     
   ,blaze-html
   ,http-types
   ,pureMD5  
   ,aeson   
   ,process
   ,regex-posix 
   ,pandoc     
   ,highlighting-kate
   ,time            
   ,unix           
   ,filepath      
   ,old-locale   
   ,xml         
   ,feed       
   ,deepseq   
   ,warp
   ,wai-extra

  Other-Modules: LBH.Controllers
                 LBH.Views
                 LBH.MP
                 LBH.ActiveCode
                 ActiveCode.Languages

Executable activeCode
  Main-is: activeCode.hs
  Build-Depends:
    base              >= 4.5     && < 5.0
   ,bytestring  
  Other-Modules: ActiveCode.C
                 ActiveCode.Haskell
                 ActiveCode.JavaScript
                 ActiveCode.Bash
                 ActiveCode.Languages
                 ActiveCode.Utils
